--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,16 @@ main {
     height: 100vh;
     padding-bottom: 7vh;
 }
+.weoffer{
+    background-image: url('src/assets/Images/weoffer.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    /* padding-bottom: 7vh; */
+}
