--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-main {
+/* main {
     background-image: url('src/assets/Images/Login-bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -8,7 +8,7 @@ main {
     justify-content: center;
     width: 100%;
     height: 100vh;
-}
+} */
 
 .intro{
     background-image: url('src/assets/Images/Rooftop.jpeg');
